refactor update app api
