# src/docs/swagger.json
@@ -122,18 +122,18 @@
                 }
             }
         },
-        "/admin/apps/{id}/reset": {
+        "/admin/apps/{id}": {
             "put": {
                 "security": [
                     {
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Reset a app",
+                "description": "Update a app",
                 "tags": [
                     "admin_app"
                 ],
-                "summary": "Reset a app",
+                "summary": "Update a app",
                 "parameters": [
                     {
                         "type": "integer",
@@ -141,68 +141,22 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "request body",
+                        "name": "updateAppReq",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/admin.updateAppReq"
+                        }
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/admin.addAppRes"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/inkstone.ClientError"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/inkstone.ClientError"
-                        }
-                    },
-                    "403": {
-                        "description": "Forbidden",
-                        "schema": {
-                            "$ref": "#/definitions/inkstone.ClientError"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/admin/apps/{id}/toggle": {
-            "put": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "Toggle a app",
-                "tags": [
-                    "admin_app"
-                ],
-                "summary": "Toggle a app",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "app id",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/admin.toggleAppRes"
+                            "$ref": "#/definitions/admin.appRes"
                         }
                     },
                     "400": {
@@ -793,6 +747,9 @@
                 "name": {
                     "type": "string"
                 },
+                "secret": {
+                    "type": "string"
+                },
                 "updatedAt": {
                     "type": "string"
                 }
@@ -835,20 +792,6 @@
                 }
             }
         },
-        "admin.toggleAppRes": {
-            "type": "object",
-            "properties": {
-                "active": {
-                    "type": "boolean"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
         "admin.tokenRes": {
             "type": "object",
             "properties": {
@@ -875,6 +818,19 @@
                 },
                 "updatedAt": {
                     "type": "string"
+                }
+            }
+        },
+        "admin.updateAppReq": {
+            "type": "object",
+            "properties": {
+                "activeToggle": {
+                    "type": "boolean",
+                    "example": true
+                },
+                "resetSecret": {
+                    "type": "boolean",
+                    "example": false
                 }
             }
         },
