# src/router/admin/setup.go
@@ -15,8 +15,7 @@ func SetupAdminGroup(rg *gin.RouterGroup, appName string) {
 	gAdmin.GET("dashboard", inkstone.HandlerAdapter(dashboard))
 	gAdmin.GET("apps", inkstone.HandlerAdapter(apps))
 	gAdmin.POST("apps", inkstone.HandlerAdapter(addApp))
-	gAdmin.PUT("apps/:id/reset", inkstone.HandlerAdapter(resetApp))
-	gAdmin.PUT("apps/:id/toggle", inkstone.HandlerAdapter(toggleApp))
+	gAdmin.PUT("apps/:id", inkstone.HandlerAdapter(updateApp))
 	gAdmin.GET("tokens", inkstone.HandlerAdapter(tokens))
 	gAdmin.DELETE("tokens/:id", inkstone.HandlerAdapter(deleteToken))
 	gAdmin.GET("staffs", inkstone.HandlerAdapter(staffs))
